--- a/overview/at_a_glance.html
+++ b/overview/at_a_glance.html
@@ -90,10 +90,8 @@
 <p>注意: 基本上 index.php 檔案包含在 URL 裡頭，但是你可以用 .htaccess 輕鬆的將它移除。</p>
 
 
-<h2>CodeIgniter Packs a Punch</h2>
-<p>CodeIgniter comes with  full-range of libraries that enable the most commonly needed web development tasks,
-like accessing a database，sending email，validating form data，maintaining sessions，manipulating images，working with XML-RPC data and 
-much more.</p>
+<h2>CodeIgniter 強而有力</h2>
+<p>CodeIgniter 具有各種程式庫可滿足常見網站開發需求，像是資料庫存取、收發信件、表單資料驗證、session 管制、影像處理、處理 XML-RPC 資料等。</p>
 
 <h2>CodeIgniter 具有延展性</h2>
 <p>系統可以很簡單的延伸，透過使用 plugins、helper libraries、class extensions 或是 system hooks。</p>
