--- a/installation/troubleshooting.html
+++ b/installation/troubleshooting.html
@@ -59,14 +59,13 @@
 
 <p>當你發現無論放入什麼樣到東西到 URL 裡頭，仍只有預設的頁面被載入，這表示你的伺服器可能不支援 PATH_INFO 變數(這變數是用來提供搜尋引擎友善的 URLS 位址)。
 
-首先，開啟 <dfn>application/config/config.php</dfn> 這個檔案，並且搜尋 <kbd>URI Protocol</kbd> 的部份，他會建議你試試 a couple alternate 設定。 假如你修改後，它仍無法運作，你還需要強制要求 CodeIgniter 加上一個問號在你的 URLs 後頭。開啟 <kbd>application/config/config.php</kbd> 這個檔案，接者把底下這行:</p>
+首先，開啟 <dfn>application/config/config.php</dfn> 這個檔案，並且搜尋 <kbd>URI Protocol</kbd> 的部份，他會建議你先試試其他設定值。 假如你修改後，它仍無法運作，你則需要強制要求 CodeIgniter 加上一個問號在你的 URLs 後頭。請開啟 <kbd>application/config/config.php</kbd> 這個檔案，接者把 <kbd>Index File</kbd> 底下這行:</p>
 
 <code>$config['index_page'] = "index.php";</code>
 
 <p>改成這樣:</p>
 
 <code>$config['index_page'] = "index.php?";</code>
-
 
 </div>
 <!-- END CONTENT -->
