--- a/libraries/pagination.html
+++ b/libraries/pagination.html
@@ -66,7 +66,7 @@ Pagination 類別
 
 <h2>Example</h2>
 
-<p>Here is a simple example showing how to create pagination in one of your <a href="../general/controllers.html">controller</a> functions:</p>
+<p>底下是一個簡單的例子，教您如何在 <a href="../general/controllers.html">controller</a> functions 裡面建立基本分頁</p>
 
 <code>
 $this->load->library('pagination');<br /><br />	
@@ -81,8 +81,7 @@ echo  $this->pagination->create_links();</code>
 
 <h3>注意:</h3>
 
-<p>The <var>$config</var> array contains your configuration variables.  It is passed to the <dfn>$this->pagination->initialize</dfn> function as shown above.  Although there are some twenty items you can configure，at
-minimum you need the three shown.  Here is a description of what those items represent:</p>
+<p>這 <var>$config</var> 陣列裡面包含了您所設定的基本變數。 上面設定的所有變數會傳送到 <dfn>$this->pagination->initialize</dfn> function 裡面。 雖然您可以設定大多數的參數，最基本的三個參數是您必須要設定的。這裡簡單描述這三個參數的用法及意義:</p>
 
 <ul>
 	<li><strong>base_url</strong> This is the full URL to the controller class/function containing your pagination.  In the example
