--- a/libraries/pagination.html
+++ b/libraries/pagination.html
@@ -81,7 +81,7 @@ echo  $this->pagination->create_links();</code>
 
 <h3>注意:</h3>
 
-<p>這 <var>$config</var> 陣列裡面包含了您所設定的基本變數。 上面設定的所有變數會傳送到 <dfn>$this->pagination->initialize</dfn> function 裡面。 雖然您可以設定大多數的參數，最基本的三個參數是您必須要設定的。這裡簡單描述這三個參數的用法及意義:</p>
+<p>在 <var>$config</var> 陣列裡面包含了您所設定的基本變數。 上述設定的所有變數會傳送到 <dfn>$this->pagination->initialize</dfn> 函數裡面。 雖然您可以設定大多數的參數，但最基本的三個參數是您必須要設定的。這裡簡單描述這三個參數的用法及意義:</p>
 
 <ul>
 	<li><strong>base_url</strong> This is the full URL to the controller class/function containing your pagination.  In the example
