--- a/libraries/pagination.html
+++ b/libraries/pagination.html
@@ -66,7 +66,7 @@ Pagination 類別
 
 <h2>Example</h2>
 
-<p>底下是一個簡單的例子，教您如何在 <a href="../general/controllers.html">controller</a> functions 裡面建立基本分頁</p>
+<p>底下是一個簡單的例子，教您如何在 <a href="../general/controllers.html">控制器(Controller)</a> 函數裡面建立基本分頁</p>
 
 <code>
 $this->load->library('pagination');<br /><br />	
