--- a/overview/goals.html
+++ b/overview/goals.html
@@ -66,9 +66,9 @@
 <p>以技術及建構的觀點看來，CodeIgniter 依照以下的目標建立:</p>
 
 <ul>
-<li><strong>Dynamic Instantiation.</strong>  In CodeIgniter，components are loaded and routines executed only when requested，rather than globally.  No assumptions are made by the system regarding what may be needed beyond the minimal core resources，so the system is very light-weight by default.  The events，as triggered by the HTTP request，and the controllers and views you design will determine what is invoked.</li>
-<li><strong>Loose Coupling.</strong>  Coupling is the degree to which components of a system rely on each other.  The less components depend on each other the more reusable and flexible the system becomes. Our goal was a very loosely coupled system.</li>
-<li><strong>Component Singularity.</strong>  Singularity is the degree to which components have a narrowly focused purpose.  In CodeIgniter，each class and its functions are highly autonomous in order to allow maximum usefulness.</li>
+<li><strong>動態實例化。</strong>  In CodeIgniter，components are loaded and routines executed only when requested，rather than globally.  No assumptions are made by the system regarding what may be needed beyond the minimal core resources，so the system is very light-weight by default.  The events，as triggered by the HTTP request，and the controllers and views you design will determine what is invoked.</li>
+<li><strong>鬆散耦合。</strong>  Coupling is the degree to which components of a system rely on each other.  The less components depend on each other the more reusable and flexible the system becomes. Our goal was a very loosely coupled system.</li>
+<li><strong>元件獨一性。</strong>  Singularity is the degree to which components have a narrowly focused purpose.  In CodeIgniter，each class and its functions are highly autonomous in order to allow maximum usefulness.</li>
 </ul>
 
 <p>CodeIgniter is a dynamically instantiated，loosely coupled system with high component singularity. It strives for simplicity，flexibility，and high performance in a small footprint package.</p>
