--- a/overview/goals.html
+++ b/overview/goals.html
@@ -66,9 +66,12 @@
 <p>以技術及建構的觀點看來，CodeIgniter 依照以下的目標建立:</p>
 
 <ul>
-<li><strong>動態實例化。</strong>  In CodeIgniter，components are loaded and routines executed only when requested，rather than globally.  No assumptions are made by the system regarding what may be needed beyond the minimal core resources，so the system is very light-weight by default.  The events，as triggered by the HTTP request，and the controllers and views you design will determine what is invoked.</li>
-<li><strong>鬆散耦合。</strong>  Coupling is the degree to which components of a system rely on each other.  The less components depend on each other the more reusable and flexible the system becomes. Our goal was a very loosely coupled system.</li>
-<li><strong>元件獨一性。</strong>  Singularity is the degree to which components have a narrowly focused purpose.  In CodeIgniter，each class and its functions are highly autonomous in order to allow maximum usefulness.</li>
+<li><strong>動態實例化：</strong> 在CodeIgniter中，元件只有在請求時才會載入並執行，而不是放在global等待使用。除了最小的核心，系統對於所需要的資源不做任何假設。所以系統預設是非常輕量化的。由HTTP請求觸發的事件以及你所設計的控制器及檢視會決定要執行什麼。
+</li>
+<li><strong>鬆散耦合：</strong>  耦合是系統中元件互相依賴的程度。越少相互依賴的元件，系統的重用以及彈性會越好。我們的目標是非常鬆散耦合的系統。
+</li>
+<li><strong>元件獨一性：</strong>  獨一性是元件有狹窄而專一的目的的程度。在CodeIgniter中，每個類別以及它的功能是高度自主的，以允許最大的可用性。
+</li>
 </ul>
 
 <p>CodeIgniter is a dynamically instantiated，loosely coupled system with high component singularity. It strives for simplicity，flexibility，and high performance in a small footprint package.</p>
