--- a/general/controllers.html
+++ b/general/controllers.html
@@ -245,7 +245,7 @@ class Products extends Controller {<br />
 
 <p>CodeIgniter 有個 output 類別會自動處理最後給瀏覽器的資料。更多詳細的資訊可以在 <a href="views.html">檢視(Views)</a> 以及 <a href="../libraries/output.html">Output 類別</a> 查看。某些時候，你也許會想要把最終的資料進行後續處理(post-process)，然後在把處理好的資料送回給瀏覽器。CodeIgniter 可以你新增一個 <dfn>_output()</dfn> 到控制器裡頭，來負責接收最終的的輸出資料。</p>
 
-<p><strong>非常重要:</strong>&nbsp;:  If your controller contains a function named <kbd>_output()</kbd>, it will <strong>always</strong> be called by the output class instead of echoing the finalized data directly. The first parameter of the function will contain the finalized output.
+<p><strong>非常重要:</strong>&nbsp; 若你的控制器內含名為 <kbd>_output()</kbd> 的函數，它會 <strong>總是</strong> 被 output 類別所呼叫，而不是直接傳回最終資料。函數的第一個參數包含最終的輸出。
 </p>
 
 <p>這裡有個參考範例:</p>
@@ -256,11 +256,12 @@ function _output($output)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;echo $output;<br />
 }</code>
 
-<p class="important">Please note that your <dfn>_output()</dfn> function will receive the data in its finalized state.  Benchmark and memory usage data will be rendered,
-cache files written (if you have caching enabled)，and headers will be sent (if you use that <a href="../libraries/output.html">feature</a>)
-before it is handed off to the _output() function.  If you are using this feature the page execution timer and memory usage stats might not be perfectly accurate
-since they will not take into acccount any further processing you do.  For an alternate way to control output <em>before</em> any of the final processing is done，please see
-the available methods in the <a href="../libraries/output.html">Output 類別</a>.</p>
+
+<p class="important">請注意你的 <dfn>_output()</dfn> 函數得在它進入結束狀態時，才會收到資料。
+Benchmark 以及 memory 使用量資料會被建立出來，快取檔案被寫入(假設你有啟動快取功能)以及 headers 則會送出(假如你有使用這個<a href="../libraries/output.html">功能</a>)，而且是在另一方面把 _output() 函數關閉之前。  
+
+假如你使用這項功能的話，頁面執行效能跟記憶體使用量的統計功能，可能不會完全正確的計算。由於啟動這項功能後，它們沒有辦法完整考慮到，你在其中做的所有額外處理。另外還有個方式，可以在任何的最後程序<em>完成之前<em>來控制 output，請查看<a href="../libraries/output.html">Output 類別</a>尋找可用的 methods。
+
 
 <a name="private"></a>
 <h2>私有函數</h2>
