--- a/general/reserved_names.html
+++ b/general/reserved_names.html
@@ -59,9 +59,8 @@
 
 <p>為了維持 CodeIgniter 自身的運作正常，所以使用了些函數和命名。 因此，某些名稱無法供開發者使用。 底下列的是不能使用的保留字。</p>
 <h3>控制器名稱(Controller names)</h3>
-<p>Since your controller classes will extend the main application controller you
-must be careful not to name your functions identically to the ones used by that class，otherwise your local functions
-will override them.  底下列了些保留字，可別把你的控制器函數(Controller Function)命名成底下的名稱:</p>
+<p>
+由於你的控制器類別可以擴充 application 控制器，你必須要格外小心的替你的函數命名，好讓你的類別可以正確的呼叫使用，否則會發生你的 local 函數把別的函數被覆蓋掉的情況。底下列了些保留字，可別把你的控制器函數(Controller Function)命名成底下的名稱:</p>
 <ul>
 	<li>Controller</li>
 	<li>CI_Base</li>
