--- a/general/views.html
+++ b/general/views.html
@@ -172,7 +172,7 @@ class Blog extends Controller {
 </textarea>
 
 
-<p>現在打開 view 檔，然後把底下的文字改成跟你的資料相關的 array key :</p>
+<p>現在打開 view 檔，然後把底下的文字改成跟你的資料相關的 array key 變數:</p>
 
 
 <textarea class="textarea" style="width:100%" cols="50" rows="10">
@@ -186,9 +186,9 @@ class Blog extends Controller {
 &lt;/html>
 </textarea>
 
-<p>Then load the page at the URL you've been using and you should see the variables replaced.</p>
+<p>然後載入你已經使用的 URL 該頁，應該可看到變數已經換過了。</p>
 
-<h2>Creating Loops</h2>
+<h2>新增迴圈(Creating Loops)</h2>
 
 <p>The data array you pass to your view files is not limited to simple variables.  You can
 pass multi dimensional arrays，which can be looped to generate multiple rows.  For example，if you
