--- a/general/models.html
+++ b/general/models.html
@@ -54,27 +54,28 @@ Models
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Models</h1>
+<h1>模型(Models)</h1>
 
-<p>Models are <strong>optionally</strong> available for those who want to use a more traditional MVC approach.</p>
+<p>對於要使用更傳統的MVC取向的人而言，模型(Models)是<strong>非必須的</strong>。
+</p>
 
 
 
 <ul>
-<li><a href="#what">What is a Model?</a></li>
-<li><a href="#anatomy">Anatomy of a Model</a></li>
-<li><a href="#loading">Loading a Model</a></li>
-<li><a href="#auto_load_model">Auto-Loading a Model</a> </li>
-<li><a href="#conn">Connecting to your Database</a></li>
+<li><a href="#what">什麼是模型(Model)？</a></li>
+<li><a href="#anatomy">模型(Model)剖析</a></li>
+<li><a href="#loading">模型(Model)載入</a></li>
+<li><a href="#auto_load_model">模型(Model)自動載入</a> </li>
+<li><a href="#conn">連接到你的資料庫</a></li>
 </ul>
 
 
 
-<h2><a name="what"></a>What is a Model?</h2>
+<h2><a name="what"></a>什麼是模型(Model)？</h2>
 
-<p>Models are PHP classes that are designed to work with information in your database.  For example，let's say
-you use CodeIgniter to manage a blog.  You might have a model class that contains functions to insert，update，and
-retrieve your blog data. 這裡有個example of what such a model class might look like:</p>
+<p>模型(Models)是設計來處理你資料庫中資訊的類別。
+例如，假設你用CodeIgniter來管理部落格，你也許會有一個包含新增、更新以及取得部落格資料等功能的模型類別。
+舉例來說，這樣的模型類別或許看起來會像：</p>
 
 <code>
 class&nbsp;Blogmodel&nbsp;extends&nbsp;Model&nbsp;{<br />
@@ -85,7 +86,7 @@ class&nbsp;Blogmodel&nbsp;extends&nbsp;Model&nbsp;{<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;function&nbsp;Blogmodel()<br />
 &nbsp;&nbsp;&nbsp;&nbsp;{<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// Call the Model constructor<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;// 呼叫模型(Model)的建構子constructor<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;parent::Model();<br />
 &nbsp;&nbsp;&nbsp;&nbsp;}<br />
 &nbsp;&nbsp;&nbsp;&nbsp;<br />
@@ -97,7 +98,7 @@ class&nbsp;Blogmodel&nbsp;extends&nbsp;Model&nbsp;{<br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;function&nbsp;insert_entry()<br />
 &nbsp;&nbsp;&nbsp;&nbsp;{<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$this->title&nbsp;&nbsp; = $_POST['title']; // please read the below note<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$this->title&nbsp;&nbsp; = $_POST['title']; // 請看一下下面的注意事項<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$this->content = $_POST['content'];<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$this->date&nbsp;&nbsp;&nbsp; = time();<br />
 <br />
@@ -115,14 +116,13 @@ class&nbsp;Blogmodel&nbsp;extends&nbsp;Model&nbsp;{<br />
 <br />
 }</code>
 
-<p>注意: The functions in the above example use the <a href="../database/active_record.html">Active Record</a> database functions.</p>
-<p class="important"><strong>注意:</strong> For the sake of simplicity in this example we're using $_POST directly.  This is generally bad practice，and a more common approach would be to use the <a href="../libraries/input.html">Input Class</a> $this-&gt;input-&gt;post('title')</p>
-<h2><a name="anatomy"></a>Anatomy of a Model</h2>
+<p>注意：上例的函數中使用了<a href="../database/active_record.html">Active Record</a>資料庫函數。</p>
+<p class="important"><strong>注意：</strong>為了簡化起見，在這個例子中我們直接使用$_POST變數。這通常是不好的做法，更常見的做法是使用 <a href="../libraries/input.html">Input Class</a>:  $this-&gt;input-&gt;post('title')</p>
+<h2><a name="anatomy"></a>模型(Model)剖析</h2>
 
-<p>Model classes are stored in your <dfn>application/models/</dfn> folder.  They can be nested within sub-folders if you
-want this type of organization.</p>
+<p>模型(Model)類別放在你的<dfn>application/models/</dfn>目錄中。它們允許用子目錄來做巢狀，如果你要用這種方式來組織的話。</p>
 
-<p>The basic prototype for a model class is this:</p>
+<p>模型(model)類別的基本原型是：</p>
 
 
 <code>
@@ -134,10 +134,10 @@ class&nbsp;<var>Model_name</var>&nbsp;extends&nbsp;Model&nbsp;{<br />
 &nbsp;&nbsp;&nbsp;&nbsp;}<br />
 }</code>
 
-<p>Where <var>Model_name</var> is the name of your class.  Class names <strong>must</strong> have the first letter capitalized with the rest of the name lowercase.
-Make sure your class extends the base Model class.</p>
+<p>在此<var>Model_name</var>是你的類別名稱。類別名稱<strong>必須</strong>第一個字母大寫其餘的字母小寫。
+確認你的類別繼承(extends)基本的Model類別。</p>
 
-<p>The file name will be a lower case version of your class name.  For example，if your class is this:</p>
+<p>檔案名稱是全部小寫的類別名稱。舉個例子，假設你的類別如下：</p>
 
 <code>
 class&nbsp;<var>User_model</var>&nbsp;extends&nbsp;Model&nbsp;{<br />
@@ -148,26 +148,26 @@ class&nbsp;<var>User_model</var>&nbsp;extends&nbsp;Model&nbsp;{<br />
 &nbsp;&nbsp;&nbsp;&nbsp;}<br />
 }</code>
 
-<p>Your file will be this:</p>
+<p>你的檔案會是：</p>
 
 <code>application/models/<var>user_model.php</var></code>
 
 
 
-<h2><a name="loading"></a>Loading a Model</h2>
+<h2><a name="loading"></a>模型(Model)載入</h2>
 
-<p>Your models will typically be loaded and called from within your <a href="controllers.html">controller</a> functions.
-To load a model you will use the following function:</p>
+<p>你的模型(models)只有在你的<a href="controllers.html">控制器(controller)</a>函數中才會被載入及呼叫。
+要載入一個模型(model)你要用以下的函數：</p>
 
 <code>$this->load->model('<var>Model_name</var>');</code>
 
-<p>If you model is located in a sub-folder，include the relative path from your models folder.  For example，if
-you have a model located at <dfn>application/models/blog/queries.php</dfn> you'll load it using:</p>
+<p>如果你的模型(model)放在一個子目錄中，要加上相對於模型(models)目錄的相對路徑。例如，
+如果你的模型(model)放在<dfn>application/models/blog/queries.php</dfn>，你要這樣載入：</p>
 
 <code>$this->load->model('<var>blog/queries</var>');</code>
 
 
-<p>Once loaded，you will access your model functions using an object with the same name as your class:</p>
+<p>一旦載入了，你就可以使用與類別同名的物件來存取模型(model)函數：</p>
 
 <code>
 $this->load->model('<var>Model_name</var>');<br />
@@ -175,8 +175,7 @@ $this->load->model('<var>Model_name</var>');<br />
 $this-><var>Model_name</var>->function();
 </code>
 
-<p>If you would like your model assigned to a different object name you can specify it via the second parameter of the loading
-function:</p>
+<p>如果你要將模型(model)指定一個不同的物件名稱，你可以透過載入函數的第二個參數來做：</p>
 
 
 <code>
@@ -185,7 +184,7 @@ $this->load->model('<var>Model_name</var>'，'<kbd>fubar</kbd>');<br />
 $this-><kbd>fubar</kbd>->function();
 </code>
 
-<p>這裡有個example of a controller，that loads a model，then serves a view:</p>
+<p>這裡有個控制器(controller)範例，它會載入一個模型(model)，然後備置一個檢視(view)：</p>
 
 <code>
 class&nbsp;Blog_controller&nbsp;extends&nbsp;Controller&nbsp;{<br />
@@ -199,24 +198,24 @@ class&nbsp;Blog_controller&nbsp;extends&nbsp;Controller&nbsp;{<br />
 &nbsp;&nbsp;&nbsp;&nbsp;}<br />
 }</code>
 
-<h2><a name="auto_load_model" id="auto_load_model"></a>Auto-loading Models</h2>
-<p>If you find that you need a particular model globally throughout your  application，you can tell CodeIgniter to auto-load it during system  initialization.  This is done by opening the application/config/autoload.php file and adding the model to the autoload array.</p>
+<h2><a name="auto_load_model" id="auto_load_model"></a>模型(Model)自動載入</h2>
+<p>如果你發現你需要範圍遍及整個應用的特別模型(model)，你可以告訴CodeIgniter在系統初始化的時候自動載入它。
+這可由開啟 application/config/autoload.php 檔案並把這個模型(model)加入autoload陣列做到。</p>
 
 
-<h2><a name="conn"></a>Connecting to your Database</h2>
+<h2><a name="conn"></a>連接到你的資料庫</h2>
 
-<p>When a model is loaded it does <strong>NOT</strong> connect automatically to your database.  The following options for connecting are available to you:</p>
+<p>當一個模型(model)載入時，它<strong>不會</strong>自動連接到你的資料庫。以下為你可以使用的連接選項：</p>
 
 <ul>
-<li>You can connect using the standard database methods <a href="../database/connecting.html">described here</a>，either from within your Controller class or your Model class.</li>
-<li>You can tell the model loading function to auto-connect by passing <kbd>TRUE</kbd> (boolean) via the third parameter,
-and connectivity settings，as defined in your database config file will be used:
+<li>你可以使用<a href="../database/connecting.html">這裡描述</a>的標準資料庫方法來連接，從你的控制器(Controller)類別或是模型(Model)類別都可以。</li>
+<li>你可以經由傳給模型(model)載入函數的第三個參數<kbd>TRUE</kbd> (boolean)去自動連接。這時會使用定義在資料庫設定檔中的連接設定。
 
 	<code>$this->load->model('<var>Model_name</var>'，''，<kbd>TRUE</kbd>);</code>	
 	</li>
 
 
-<li>You can manually pass database connectivity settings via the third parameter:
+<li>你可以透過這第三個參數手動傳遞資料庫連接設定：
 
 
 		<code>$config['hostname'] = "localhost";<br />
