--- a/general/libraries.html
+++ b/general/libraries.html
@@ -71,7 +71,7 @@ In most cases，to use one of these classes involves initializing it within a <a
 
 <h2>建立自己的程式庫</h2>
 
-<p>Please read the section of the user guide that discusses how to <a href="creating_libraries.html">create your own libraries</a></p>
+<p>Please read the section of the user guide that discusses how to <a href="creating_libraries.html">建立自己的程式庫</a></p>
 
 
 
