--- a/toc.html
+++ b/toc.html
@@ -103,7 +103,7 @@
 	<li><a href="./general/libraries.html">使用 CodeIgniter 程式庫</a></li>
 	<li><a href="./general/creating_libraries.html">建立自己的程式庫</a></li>
 	<li><a href="./general/core_classes.html">新增核心類別</a></li>
-	<li><a href="./general/hooks.html">Hooks - Extending the Core</a></li>
+	<li><a href="./general/hooks.html">Hooks - 擴充核心</a></li>
 	<li><a href="./general/autoloader.html">自動載入資源</a></li>
 	<li><a href="general/common_functions.html">通用函數</a></li>
 	<li><a href="./general/scaffolding.html">Scaffolding</a></li>
