--- a/general/autoloader.html
+++ b/general/autoloader.html
@@ -89,7 +89,7 @@ type of item.</p>
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="hooks.html">Hooks - Extending the Core</a>
+上個主題:&nbsp;&nbsp;<a href="hooks.html">Hooks - 擴充核心</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
