--- a/general/hooks.html
+++ b/general/hooks.html
@@ -58,7 +58,7 @@ Hooks - Extending the Framework Core
 <h1>Hooks - Extending the Framework Core</h1>
 
 <p>CodeIgniter's Hooks feature provides a means to tap into and modify the inner workings of the framework without hacking the core files.
-When CodeIgniter runs it follows a specific execution process，diagramed in the <a href="../overview/appflow.html">Application Flow</a> page.
+When CodeIgniter runs it follows a specific execution process，diagramed in the <a href="../overview/appflow.html">程式流程圖</a> page.
 There may be instances，however，where you'd like to cause some action to take place at a particular stage in the execution process.
 For example，you might want to run a script right before your controllers get loaded，or right after，or you might want to trigger one of
 your own scripts in some other location.
