--- a/general/security.html
+++ b/general/security.html
@@ -118,7 +118,7 @@ or do other malicious things. The XSS Filter is described <a href="../libraries/
 
 <li><h2>資料驗證</h2>
 
-<p>CodeIgniter has a <a href="../libraries/form_validation.html">Form Validation Class</a> that assists you in validating，filtering，and prepping
+<p>CodeIgniter has a <a href="../libraries/form_validation.html">Form Validation 類別</a> that assists you in validating，filtering，and prepping
 your data.</p>
 </li>
 
