--- a/libraries/pagination.html
+++ b/libraries/pagination.html
@@ -58,7 +58,7 @@
 
 <h1>分頁(Pagination)類別</h1>
 
-<p>CodeIgniter 的分頁類別是一個非常簡單，並且可以讓使用者 100% 自訂個人喜好設定</p>
+<p>CodeIgniter 分頁類別是一個非常簡單，並且可以讓使用者 100% 自訂個人喜好設定</p>
 
 <p>假如您還不是很瞭解分頁的功能用法，那底下就是一個範例，讓您製作簡單的分頁到下一個分頁</p>
 
@@ -84,13 +84,10 @@ echo  $this->pagination->create_links();</code>
 <p>在 <var>$config</var> 裡包含了您所設定的基本參數。上述設定的所有參數會傳送到 <dfn>$this->pagination->initialize</dfn> 函數裡面進行初始化。 雖然您可以設定大多數的參數，但最基本的三個參數是您必須要設定的。這裡簡單描述這三個參數的用法及意義:</p>
 
 <ul>
-	<li><strong>base_url</strong> This is the full URL to the controller class/function containing your pagination.  In the example
-	above，it is pointing to a controller called "Test" and a function called "page".  Keep in mind that you can
-	<a href="../general/routing.html">re-route your URI</a> if you need a different structure.</li>
-	<li><strong>total_rows</strong> This number represents the total rows in the result set you are creating pagination for.
-	Typically this number will be the total rows that your database query returned.
+	<li><strong>base_url</strong> 這是一個完整的 URL 路徑，包含了控制器(controller class)/函數(function)。在上面的範例中，它指向一個控制器叫 "Test" 和一個函數叫 "page"。記住，假如您需要不同的架構，你可以<a href="../general/routing.html">重新制定你的 URI</a>。</li>
+	<li><strong>total_rows</strong> 這個數字用來顯示您需要做分頁的所有行數，這個數據通常是您對資料庫查詢所回傳的總筆數。
 	</li>
-	<li><strong>per_page</strong> The number of items you intend to show per page.  In the above example，you would be showing 20 items per page.</li>
+	<li><strong>per_page</strong> 這個數字是用來讓您顯示每個頁面所需要的項目數量，在上面的例子中，每個頁面將會顯示20個項目。</li>
 </ul>
 
 <p>當您沒有分頁資料可以顯示的時候，<var>create_links()</var> 函數就會回傳空字串。</p>
@@ -98,7 +95,7 @@ echo  $this->pagination->create_links();</code>
 
 <h3>設定分頁參數</h3>
 
-<p>假如您不喜歡上述所說的設定方式，您可以簡單的建立 <var>pagination.php</var>，把 <var>$config</var> 參數都設定到檔案裡面，並且將檔案另存到 <var>config/pagination.php</var> 可以讓它自動被載入使用。使用這個方法，你不在需要使用 <dfn>$this->pagination->initialize</dfn> 方法。</p>
+<p>假如您不喜歡上述所說的設定方式，您可以簡單的建立 <var>pagination.php</var>，把 <var>$config</var> 參數都設定到檔案裡面，並且將檔案另存到 <var>config/pagination.php</var> 可以讓它自動被載入使用。使用這個方法，你不再需要使用 <dfn>$this->pagination->initialize</dfn> 方式載入。</p>
 
 
 <h2>自訂分頁參數</h2>
@@ -114,87 +111,82 @@ echo  $this->pagination->create_links();</code>
 
 <p>放在您目前所在頁數前面跟後面所顯示的分頁數量。舉例來說，參數設定2，就會在前面跟後面兩邊多加兩個頁數，如同此頁最頂端的例子所顯示</p>
 <h4>$config['page_query_string'] = TRUE</h4>
-<<<<<<< HEAD:libraries/pagination.html
-<p>在預設情況下，分頁類會假設您使用 <a href="../general/urls.html">URI Segments</a>，並且建構您的連結就如同底下</p>
-=======
 <p>在預設情況下，分頁類會假設您預設使用 <a href="../general/urls.html">URI Segments</a>，並且建構您的連結就如同底下</p>
->>>>>>> appleboy/master:libraries/pagination.html
 <p><code>http://example.com/index.php/test/page/20</code></p>
 <p>假如您把 $config['enable_query_strings'] 參數設定為 TRUE，您的連結將會自動地被查詢字串所改寫。這個選項可以明確的被設置。把 $config['page_query_string'] 設定為 TRUE，分頁連結將會變成：</p>
 <p><code>http://example.com/index.php?c=test&amp;m=page&amp;per_page=20</code></p>
-<p>請注意 &quot;per_page&quot; 是預設的分頁變數字串，然而您可以利用設定 $config['query_string_segment'] = 'your_string' 來改變您要的變數字串</p>
+<p>請注意 &quot;per_page&quot; 是預設的分頁變數字串，然而您可以利用設定 $config['query_string_segment'] = 'your_string' 來改變您要的變數字串。</p>
 <h2>增加 Tag 標籤</h2>
 
-<p>If you would like to surround the entire pagination with some markup you can do it with these two prefs:</p>
+<p>如果您希望在分頁左右兩邊加上 Tag 標籤，您可以利用下面兩種參數設定。</p>
 
 <h4>$config['full_tag_open'] = '&lt;p>';</h4>
-<p>The opening tag placed on the left side of the entire result.</p>
+<p>此標籤是放在顯示分頁結果的左側。</p>
 
 <h4>$config['full_tag_close'] = '&lt;/p>';</h4>
-<p>The closing tag placed on the right side of the entire result.</p>
+<p>此標籤是放在顯示分頁結果的右側。</p>
 
 
-<h2>Customizing the First Link</h2>
+<h2>自訂起始分頁連結名稱</h2>
 
 <h4>$config['first_link'] = 'First';</h4>
-<p>The text you would like shown in the "first" link on the left.</p>
+<p>您希望在分頁左邊顯示"第一頁"的名稱。</p>
 
 <h4>$config['first_tag_open'] = '&lt;div>';</h4>
-<p>The opening tag for the "first" link.</p>
+<p>第一頁連結左邊標籤。</p>
 
 <h4>$config['first_tag_close'] = '&lt;/div>';</h4>
-<p>The closing tag for the "first" link.</p>
+<p>第一頁連結右邊標籤。</p>
 
-<h2>Customizing the Last Link</h2>
+<h2>自訂結束分頁連結名稱</h2>
 
 <h4>$config['last_link'] = 'Last';</h4>
-<p>The text you would like shown in the "last" link on the right.</p>
+<p>您希望在分頁右邊顯示"最後一頁"的名稱。</p>
 
 <h4>$config['last_tag_open'] = '&lt;div>';</h4>
-<p>The opening tag for the "last" link.</p>
+<p>最後一頁連結左邊標籤。</p>
 
 <h4>$config['last_tag_close'] = '&lt;/div>';</h4>
-<p>The closing tag for the "last" link.</p>
+<p>最後一頁連結右邊標籤。</p>
 
-<h2>Customizing the "Next" Link</h2>
+<h2>自訂"下一頁"連結名稱</h2>
 
 <h4>$config['next_link'] = '&amp;gt;';</h4>
-<p>The text you would like shown in the "next" page link.</p>
+<p>您希望在分頁中顯示"下一頁"的名稱。</p>
 
 <h4>$config['next_tag_open'] = '&lt;div>';</h4>
-<p>The opening tag for the "next" link.</p>
+<p>下一頁連結左邊標籤。</p>
 
 <h4>$config['next_tag_close'] = '&lt;/div>';</h4>
-<p>The closing tag for the "next" link.</p>
+<p>下一頁連結右邊標籤。</p>
 
-<h2>Customizing the "Previous" Link</h2>
+<h2>自訂"上一頁"連結名稱</h2>
 
 <h4>$config['prev_link'] = '&amp;lt;';</h4>
-<p>The text you would like shown in the "previous" page link.</p>
+<p>您希望在分頁中顯示"上一頁"的名稱。</p>
 
 <h4>$config['prev_tag_open'] = '&lt;div>';</h4>
-<p>The opening tag for the "previous" link.</p>
+<p>上一頁連結的左邊標籤。</p>
 
 <h4>$config['prev_tag_close'] = '&lt;/div>';</h4>
-<p>The closing tag for the "previous" link.</p>
+<p>上一頁連結的右邊標籤。</p>
 
-<h2>Customizing the "Current Page" Link</h2>
+<h2>自訂"目前頁面"連結名稱</h2>
 
 <h4>$config['cur_tag_open'] = '&lt;b>';</h4>
-<p>The opening tag for the "current" link.</p>
+<p>目前頁面左邊標籤。</p>
 
 <h4>$config['cur_tag_close'] = '&lt;/b>';</h4>
-<p>The closing tag for the "current" link.</p>
+<p>目前頁面右邊標籤。</p>
 
 
-<h2>Customizing the "Digit" Link</h2>
+<h2>自訂分頁數字連結</h2>
 
 <h4>$config['num_tag_open'] = '&lt;div>';</h4>
-<p>The opening tag for the "digit" link.</p>
+<p>分頁數字連結左邊標籤。</p>
 
 <h4>$config['num_tag_close'] = '&lt;/div>';</h4>
-<p>The closing tag for the "digit" link.</p>
-		
+<p>分頁數字連結右邊標籤。</p>
 
 
 </div>
