--- a/libraries/pagination.html
+++ b/libraries/pagination.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Pagination 類別 : CodeIgniter 使用手冊</title>
+<title>分頁(Pagination) 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
