--- a/general/libraries.html
+++ b/general/libraries.html
@@ -58,12 +58,11 @@
 <h1>使用 CodeIgniter 程式庫</h1>
 
 
-<p>All of the available libraries are located in your <dfn>system/libraries</dfn> folder.
-In most cases，to use one of these classes involves initializing it within a <a href="controllers.html">controller</a> using the following initialization function:</p>
+<p>所有可用的程式庫置於 <dfn>system/libraries</dfn> 目錄之下。大部份情況，其中的類別可透過 <a href="controllers.html">控制器(controller)</a> 使用下列函數來啟用:</p>
 
 <code>$this->load->library('<var>class name</var>'); </code>
 
-<p>Where <var>class name</var> is the name of the class you want to invoke.  For example，to load the validation class you would do this:</p>
+<p>其中 <var>class name</var> 為你想取的類別名稱。舉例來說，你可以底下方式來載入 validation 類別:</p>
 
 <code>$this->load->library('<var>validation</var>'); </code>
 
