--- a/general/libraries.html
+++ b/general/libraries.html
@@ -66,11 +66,11 @@
 
 <code>$this->load->library('<var>validation</var>'); </code>
 
-<p>Once initialized you can use it as indicated in the user guide page corresponding to that class.</p>
+<p>只要載入後，你就可以依照教學手冊的相關章節來使用它:</p>
 
 <h2>建立自己的程式庫</h2>
 
-<p>Please read the section of the user guide that discusses how to <a href="creating_libraries.html">建立自己的程式庫</a></p>
+<p>請閱讀使用手冊的相關章節來學習如何<a href="creating_libraries.html">建立自己的程式庫</a></p>
 
 
 
