--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -57,8 +57,9 @@
 
 <h1>建立自己的程式庫</h1>
 
-<p>When we use the term "Libraries" we are normally referring to the classes that are located in the <kbd>libraries</kbd>
-directory and described in the 類別參考 of this user guide.  In this case，however，we will instead describe how you can create
+<p>當我們使用"程式庫(Libraries)"這個名稱的時候，我們通常指的是位在 <kbd>libraries</kbd> 目錄底下的類別，詳細可參考使用手冊中的類別參考的說明。
+
+In this case，however，we will instead describe how you can create
 your own libraries within your <dfn>application/libraries</dfn> directory in order to maintain separation between your local resources
 and the global framework resources.</p>
 
@@ -68,15 +69,15 @@ to an existing library. Or you can even replace native libraries just by placing
 <p>總結歸納:</p>
 
 <ul>
-<li>You can create entirely new libraries.</li>
-<li>You can extend native libraries.</li>
-<li>You can replace native libraries.</li>
+<li>你可以建立(create)全新的程式庫。</li>
+<li>你可以擴充(extend)原有的程式庫。</li>
+<li>你可以取代(replace)原有的程式庫。</li>
 </ul>
 
-<p>The page below explains these three concepts in detail.</p>
+<p>底下詳細解釋這三個概念。</p>
 
-<p class="important"><strong>注意:</strong> The Database 類別es can not be extended or replaced with your own classes,
-nor can the Loader class in PHP 4.  All other classes are able to be replaced/extended.</p>
+<p class="important"><strong>注意:</strong> The Databasees can not be extended or replaced with your own classes,
+nor can the Loader class in PHP 4.  其他的類別才可以被擴充/取代。</p>
 
 
 <h2>存檔位置</h2>
