--- a/general/routing.html
+++ b/general/routing.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>URI Routing : CodeIgniter 使用手冊</title>
+<title>URI路由 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-URI Routing
+URI路由
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,17 +55,19 @@ URI Routing
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>URI Routing</h1>
+<h1>URI路由</h1>
 
-<p>Typically there is a one-to-one relationship between a URL string and its corresponding controller class/method.
-The segments in a URI normally follow this pattern:</p>
+<p>一般說來，在URL字串與對應的控制器(controller)類別/方法之間有著一對一的關係。
+通常這些在URI中的片段會遵照下列的模式：
+</p>
 
 <code>example.com/<dfn>class</dfn>/<samp>function</samp>/<var>id</var>/</code>
 
-<p>In some instances，however，you may want to remap this relationship so that a different class/function can be called
-instead of the one corresponding to the URL.</p>
+<p>不過在一些實例中，你可能想要重新對應這個關係好讓不同的類別/方法可以被呼叫，而不是原本對應到URL的類別/方法。
+</p>
 
-<p>For example，lets say you want your URLs to have this prototype:</p>
+<p>例如，假設你要讓你的URL有以下的形式：
+</p>
 
 <p>
 example.com/product/1/<br />
@@ -74,88 +76,103 @@ example.com/product/3/<br />
 example.com/product/4/
 </p>
 
-<p>Normally the second segment of the URL is reserved for the function name，but in the example above it instead has a product ID.
-To overcome this，CodeIgniter allows you to remap the URI handler.</p>
+<p>正常狀況下，URL的第二片段是保留給函數名稱，但是在上例中，它卻含有product ID。
+為了克服這個狀況，CodeIgniter允許你重新對應URL handler。
+</p>
 
 
-<h2>Setting your own routing rules</h2>
+<h2>設定你自己的路由規則</h2>
 
-<p>Routing rules are defined in your <var>application/config/routes.php</var> file.  In it you'll see an array called <dfn>$route</dfn> that
-permits you to specify your own routing criteria. Routes can either be specified using <dfn>wildcards</dfn> or <dfn>Regular Expressions</dfn></p>
+<p>路由規則定義在你的<var>application/config/routes.php</var>檔案中。你可以在裡面看到一個叫做<dfn>$route</dfn>的陣列，它允許你指定你自己的路由標準。路由可以用<dfn>萬用字元</dfn>或是<dfn>正規式</dfn>來指定。
+</p>
 
 
-<h2>Wildcards</h2>
+<h2>萬用字元</h2>
 
-<p>A typical wildcard route might look something like this:</p>
+<p>一個典型的萬用字元路由看起來會像這樣：
+</p>
 
 <code>$route['product/:num'] = "catalog/product_lookup";</code>
 
-<p>In a route，the array key contains the URI to be matched，while the array value  contains the destination it should be re-routed to.
-In the above example，if the literal word "product" is found in the first segment of the URL，and a number is found in the second segment,
-the "catalog" class and the "product_lookup" method are instead used.</p>
+<p>在一個路由中，陣列的key包含了要被匹配的URI，而陣列值則包含要被重導的目標。
+在上例中，如果"product"這個字在URL的第一片段，而且第二片段是數字，則轉而使用"catalog"類別以及"product_lookup"方法。
+</p>
 
-<p>You can match literal values or you can use two wildcard types:</p>
+<p>你可以用文字的值或是兩種萬用字元來匹配：
+</p>
 
 <p>
 :num<br />
 :any
 </p>
 
-<p><strong>:num</strong> will match a segment containing only numbers.<br />
-<strong>:any</strong> will match a segment containing any character.
+<p><strong>:num</strong>將匹配只含有數字的一個片段<br />
+<strong>:any</strong>將匹配含有任何字元的一個片段
 </p>
 
-<p class="important"><strong>注意:</strong> Routes will run in the order they are defined.
-Higher routes will always take precedence over lower ones.</p>
+<p class="important"><strong>注意：</strong>路由將依照它們定義時的順序執行。較高的路由總是凌駕較低的。
+</p>
 
-<h2>Examples</h2>
+<h2>範例</h2>
 
-<p>Here are a few routing examples:</p>
+<p>這裡有幾個路由的範例：
+</p>
 
 <code>$route['journals'] = "blogs";</code>
-<p>A URL containing the word "journals" in the first segment will be remapped to the "blogs" class.</p>
+<p>一個在第一片段包含"journals"這個字的URL，將被重新對應到"blogs"類別。
+</p>
 
 <code>$route['blog/joe'] = "blogs/users/34";</code>
-<p>A URL containing the segments blog/joe will be remapped to the "blogs" class and the "users" method.  The ID will be set to "34".</p>
+<p>一個包含"blog/joe"片段的URL，將重新對應到"blogs"類別以及"users"方法。ID將會設定成"34"。
+</p>
 
 <code>$route['product/:any'] = "catalog/product_lookup";</code>
-<p>A URL with "product" as the first segment，and anything in the second will be remapped to the "catalog" class and the  "product_lookup" method.</p>
+<p>一個在第一片段是"product"而在第二片段是任何值的URL，將重新對應到"catalog"類別以及"product_lookup"方法。
+</p>
 
 <code>$route['product/(:num)'] = "catalog/product_lookup_by_id/$1";</code>
-<p>A URL with "product" as the first segment，and anything in the second will be remapped to the "catalog" class and the "product_lookup_by_id" method passing in the match as a variable to the function.</p>
+<p>一個在第一片段為"product"而第二片段是任何數字的URL將重新對應到"catalog"類別以及"product_lookup_by_id"方法，匹配的數字將傳給這個函數作為變數。
+</p>
 
-<p class="important"><strong>非常重要:</strong> Do not use leading/trailing slashes.</p>
+<p class="important"><strong>非常重要：</strong>不要在開頭/結尾使用斜線。
+</p>
 
-<h2>Regular Expressions</h2>
+<h2>正規式</h2>
 
-<p>If you prefer you can use regular expressions to define your routing rules.  Any valid regular expression is allowed，as are back-references.</p>
+<p>如果你偏好使用正規式來定義路由規則，任何合法的正規式都允許使用，包括back reference。
+</p>
 
-<p class="important"><strong>注意:</strong>&nbsp; If you use back-references you must use the dollar syntax rather than the double backslash syntax.</p>
+<p class="important"><strong>注意：</strong>如果使用back reference，你必須使用$語法而不是\\語法。
+</p>
 
-<p>A typical RegEx route might look something like this:</p>
+<p>一個典型的正規式路由可能看起來像這樣：
+</p>
 
 <code>$route['products/([a-z]+)/(\d+)'] = "$1/id_$2";</code>
 
-<p>In the above example，a URI similar to <dfn>products/shirts/123</dfn> would instead call the <dfn>shirts</dfn> controller class and the <dfn>id_123</dfn> function.</p>
+<p>在上例中，一個像<dfn>products/shirts/123</dfn>的URL會轉而呼叫<dfn>shirts</dfn>控制器(controller)類別及<dfn>id_123</dfn>函數。
+</p>
 
-<p>You can also mix and match wildcards with regular expressions.</p>
+<p>你也可以混合且用萬用字元來與正規式匹配。
+</p>
 
-<h2>Reserved Routes</h2>
+<h2>保留的路由</h2>
 
-<p>There are two reserved routes:</p>
+<p>有兩個保留的路由：
+</p>
 
 <code>$route['default_controller'] = 'welcome';</code>
 
-<p>This route indicates which controller class should be loaded if the URI contains no data，which will be the case
-when people load your root URL. In the above example，the "welcome" class would be loaded.  You
-are encouraged to always have a default route otherwise a 404 page will appear by default.</p>
+<p>這個路由指定在URI裡沒有任何資料時要載入哪個控制器(controller)類別，人們載入根URL時就是這個情況。在上例中，"welcome"類別將被載入。你要儘量有一個預設路由，否則預設會出現一個404頁面。
+</p>
 
 <code>$route['scaffolding_trigger'] = 'scaffolding';</code>
 
-<p>This route lets you set a secret word，which when present in the URL，triggers the scaffolding feature.
-Please read the <a href="scaffolding.html">Scaffolding</a> page for details.</p>
+<p>這個路由讓你設定一個密語，當它出現在URL中時，就會觸發scaffolding功能。請閱讀<a href="scaffolding.html">Scaffolding</a> 頁面來獲得詳情。
+</p>
 
-<p class="important"><strong>非常重要:</strong>&nbsp; The reserved routes must come before any wildcard or regular expression routes.</p>
+<p class="important"><strong>非常重要：</strong>保留的路由必須在任何萬用字元或正規式路由之前。
+</p>
 
 </div>
 <!-- END CONTENT -->
