minor modified 'general/hooks.html' title to fit toc.

--- a/general/hooks.html
+++ b/general/hooks.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Hooks - 擴充框架核心 : CodeIgniter 使用手冊</title>
+<title>Hooks - 擴充核心 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Hooks - 擴充框架核心
+Hooks - 擴充核心
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -55,7 +55,7 @@ Hooks - 擴充框架核心
 <!-- START CONTENT -->
 <div id="content">
 
-<h1>Hooks - 擴充框架核心</h1>
+<h1>Hooks - 擴充核心</h1>
 
 <p>CodeIgniter的Hooks機制提供了一個方法來進入並改變框架的內部作業而不用修改核心檔案。當CodeIgniter執行時，它會遵循在<a href="../overview/appflow.html">程式流程圖</a>頁面中圖示的流程。不過在一些實例中，你也許會想要在流程的特定的階段執行特定的動作。例如，你可能會想要在你的控制器(controller)載入前後執行一些程式，或是在其他位置觸發你自己的程式。
 </p>
