--- a/general/views.html
+++ b/general/views.html
@@ -172,7 +172,7 @@ class Blog extends Controller {
 </textarea>
 
 
-<p>現在打開 view 檔，然後把底下的文字改成跟你的資料相關的 array key 變數:</p>
+<p>現在打開 view 檔，然後把底下的文字改成跟你的資料相關的陣列變數名稱:</p>
 
 
 <textarea class="textarea" style="width:100%" cols="50" rows="10">
@@ -190,11 +190,10 @@ class Blog extends Controller {
 
 <h2>新增迴圈(Creating Loops)</h2>
 
-<p>The data array you pass to your view files is not limited to simple variables.  You can
-pass multi dimensional arrays，which can be looped to generate multiple rows.  For example，if you
-pull data from your database it will typically be in the form of a multi-dimensional array.</p>
+<p>送給 view 檔的資料陣列不限為單變數。可以送出多維陣列，用來重複產生多欄資料。
+舉例來說，你從資料庫將資料拉出來，它基本上是多為度陣列的型式。</p>
 
-<p>Here's a simple example. Add this to your controller:</p>
+<p>這裡舉了簡單的例子。新增至你的控制器(controller)裡頭:</p>
 
 <textarea class="textarea" style="width:100%" cols="50" rows="17">
 &lt;?php
@@ -214,7 +213,7 @@ class Blog extends Controller {
 </textarea>
 
 
-<p>Now open your view file and create a loop:</p>
+<p>開啟 view 檔，新增迴圈:</p>
 
 
 <textarea class="textarea" style="width:100%" cols="50" rows="24">
@@ -238,15 +237,13 @@ class Blog extends Controller {
 &lt;/body>
 &lt;/html>
 </textarea>
-<p><strong>注意:</strong> You'll notice that in the example above we are using PHP's alternative syntax.  If you
-are not familiar with it you can read about it <a href="alternative_php.html">here</a>.</p>
+<p><strong>注意:</strong> 你會發現上例中，我們使用的是變換 PHP 句法的方式。若你不熟悉那種句法的話，可以參考
+<a href="alternative_php.html">這裡</a>。</p>
 
 <h2>Returning views as data</h2>
 
-<p>There is a third <strong>optional</strong> parameter lets you change the behavior of the function so that it returns data as a string
-rather than sending it to your browser.  This can be useful if you want to process the data in some way.  If you
-set the parameter to <kbd>true</kbd> (boolean) it will return data.  The default behavior is <kbd>false</kbd>，which sends it
-to your browser.  Remember to assign it to a variable if you want the data returned:</p>
+<p>其中第三個 <strong>選擇性</strong> 參數，可以讓你改變函數的行為，所以你可以把資送如字串般傳回，然後將它送至你的瀏覽器。假如有時你要以某些方式來處理資料的話，這還蠻好用的。譬如你可以把參數設定成<kbd>true</kbd> 布林值(boolean)，他就會傳回資料。預設的函數行為是 <kbd>false</kbd>，為送至你的瀏覽器。記得你若要資料回傳的話，記得給予它正確的變數值:</p>
+
 
 <code>$string = $this->load->view('<var>myfile</var>'，''，<kbd>true</kbd>);</code>
 
