--- a/general/models.html
+++ b/general/models.html
@@ -237,11 +237,11 @@ class&nbsp;Blog_controller&nbsp;extends&nbsp;Controller&nbsp;{<br />
 
 <div id="footer">
 <p>
-上個主題:&nbsp;&nbsp;<a href="views.html">Views</a>
+上個主題:&nbsp;&nbsp;<a href="views.html">檢視(Views)</a>
 &nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="#top">頁首</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
 <a href="../index.html">使用手冊首頁</a>&nbsp;&nbsp;&nbsp;&middot;&nbsp;&nbsp;
-下個主題:&nbsp;&nbsp;<a href="helpers.html">補助函數</a>
+下個主題:&nbsp;&nbsp;<a href="helpers.html">補助函數(Helpers)</a>
 </p>
 <p><a href="http://www.codeigniter.com.tw">CodeIgniter</a> &nbsp;&middot;&nbsp; Copyright &#169; 2006-2008 &nbsp;&middot;&nbsp; <a href="http://ellislab.com/">Ellislab，Inc.</a></p>
 </div>
