--- a/general/autoloader.html
+++ b/general/autoloader.html
@@ -57,30 +57,23 @@
 
 <h1>自動載入資源</h1>
 
-<p>CodeIgniter comes with an "Auto-load" feature that permits libraries，helpers，and plugins to be initialized
-automatically every time the system runs. If you need certain resources globally throughout your application you should
-consider auto-loading them for convenience.</p>
+<p>CodeIgniter 具有 "自動載入(auto-load)" 的功能，可允許程式庫、輔助函數、外掛模組在每次系統啟動時自動載入。如果你需要某個資源可在 application 被全域(globally)使用的話，你應該考慮使用自動載入的功能。</p>
 
-<p>The following items can be loaded automatically:</p>
+<p>底下的項目可以被自動載入:</p>
 
 <ul>
-<li>Core classes found in the "libraries" folder</li>
-<li>補助函數 files found in the "helpers" folder</li>
-<li>Plugins found in the "plugins" folder</li>
-<li>Custom config files found in the "config" folder</li>
-<li>Language files found in the "system/language" folder </li>
+<li>位在 "libraries" 目錄下的核心類別檔(core classes)</li>
+<li>位在 "helpers 目錄下的補助函數檔(helpers)</li>
+<li>位在 "plugins" 目錄下的外掛模組檔(plugins)</li>
+<li>位在 "config" 目錄下的自訂設定檔(config)</li>
+<li>位在 "system/language" 下的語言檔(language)</li>
 <li>Models found in the &quot;models&quot; folder</li>
 </ul>
 
-<p>To autoload resources，open the <var>application/config/autoload.php</var> file and add the item you want
-loaded to the <samp>autoload</samp> array. You'll find instructions in that file corresponding to each
-type of item.</p>
+<p>要自動載入資源，請開啟 <var>application/config/autoload.php</var> 的檔案，然後將要自動載入的項目置於 
+ <samp>autoload</samp> array 裡頭。你可以位不同的載入項目，找到相關的的說明。</p>
 
-<p class="important"><strong>注意:</strong>  Do not include the file extension (.php) when adding items to the autoload array.</p>
-
-
-
-
+<p class="important"><strong>注意:</strong>  當新增載入項目至 autoload array 時，不需要包含檔案的副檔名(.php)</p>
 
 
 </div>
